--- a/Tu/Tu-Info.plist
+++ b/Tu/Tu-Info.plist
@@ -43,5 +43,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>tu</string>
+		</dict>
+	</array>
 </dict>
 </plist>
