--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/leveldb"]
 	path = lib/leveldb
 	url = https://code.google.com/p/leveldb/
+[submodule "lib/json11"]
+	path = lib/json11
+	url = https://github.com/dropbox/json11.git
